Move baseUrl, apiKey, iamConfig properties under FixedRuntimeConfig